--- a/ios-timer-app/Base.lproj/Main.storyboard
+++ b/ios-timer-app/Base.lproj/Main.storyboard
@@ -41,11 +41,17 @@
                                         <rect key="frame" x="0.0" y="0.0" width="143" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="취소"/>
+                                        <connections>
+                                            <action selector="tapCancelButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zt8-lO-NSv"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5i1-mM-X13">
                                         <rect key="frame" x="223" y="0.0" width="143" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="시작"/>
+                                        <connections>
+                                            <action selector="tapToggleButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hCJ-9L-IRy"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -69,6 +75,13 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xMT-br-jga" secondAttribute="trailing" constant="24" id="zgY-nb-bx3"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cancelButton" destination="m7c-Ci-1Gp" id="WR3-RM-0in"/>
+                        <outlet property="datePicker" destination="GyK-hi-Fn1" id="atl-z9-HZH"/>
+                        <outlet property="progressView" destination="uWD-yc-18H" id="0lY-sT-OW9"/>
+                        <outlet property="timerLabel" destination="0Bp-il-Hs7" id="R0L-kM-c9G"/>
+                        <outlet property="toggleButton" destination="5i1-mM-X13" id="gnX-Ug-CdU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
