--- a/ios-timer-app/Base.lproj/Main.storyboard
+++ b/ios-timer-app/Base.lproj/Main.storyboard
@@ -22,13 +22,13 @@
                                     <constraint firstAttribute="height" constant="100" id="mWS-xj-hv0"/>
                                 </constraints>
                             </imageView>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00: 00: 00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Bp-il-Hs7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00: 00: 00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Bp-il-Hs7">
                                 <rect key="frame" x="24" y="248" width="366" height="60"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="50"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="1" translatesAutoresizingMaskIntoConstraints="NO" id="uWD-yc-18H">
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="1" translatesAutoresizingMaskIntoConstraints="NO" id="uWD-yc-18H">
                                 <rect key="frame" x="48" y="338" width="318" height="4"/>
                             </progressView>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="countDownTimer" minuteInterval="1" style="wheels" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GyK-hi-Fn1">
@@ -78,6 +78,7 @@
                     <connections>
                         <outlet property="cancelButton" destination="m7c-Ci-1Gp" id="WR3-RM-0in"/>
                         <outlet property="datePicker" destination="GyK-hi-Fn1" id="atl-z9-HZH"/>
+                        <outlet property="imageView" destination="cHJ-9y-0ge" id="RBk-4D-7gG"/>
                         <outlet property="progressView" destination="uWD-yc-18H" id="0lY-sT-OW9"/>
                         <outlet property="timerLabel" destination="0Bp-il-Hs7" id="R0L-kM-c9G"/>
                         <outlet property="toggleButton" destination="5i1-mM-X13" id="gnX-Ug-CdU"/>
